# ooconv

./: CMakeLists.txt
lib/DocumentBuilder/linux/: docbuilder
lib/DocumentBuilder/linux/sdkjs/slide/: sdk-all-min.js
lib/DocumentBuilder/linux/sdkjs/word/: sdk-all-min.js
lib/DocumentBuilder/win/: DoctRenderer.config  LICENSE.htm  README.txt  doctrenderer.lib
lib/DocumentBuilder/win/include/: docbuilder.h
lib/DocumentBuilder/win/sdkjs/cell/: sdk-all-min.js
lib/DocumentBuilder/win/sdkjs/common/: AllFonts.js
src/: CMakeLists.txt  main.cpp
test/: test.odt  test2.odp
